--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -7,12 +7,14 @@
   
 }
 
+
 .flex-container
 {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    touch-action: manipulation;
 }
 .buttons {
     display: flex;
