--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,6 +1,21 @@
+@media only screen and (max-width: 768px) {
+.board{
+    width: 23em;
+}
+.buttons{
+    display: flex;
+    flex-direction: column;
+}
+
+
+
+}
+@media only screen and (min-width: 768px) {
+   .board{ width: 35em;}
+}
 .board {
     height: 35em;
-    width: 35em;
+    
     display: grid;
     border: 5px solid black;
     border-radius: 5px;
